--- a/app/src/main/res/layout/activity_create_or_edit_spaceship.xml
+++ b/app/src/main/res/layout/activity_create_or_edit_spaceship.xml
@@ -56,6 +56,7 @@
         android:ems="10"
         android:hint="@string/color_hint"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="32dp"
-        android:text="@string/ok"
+        android:text="@string/add"
+        android:onClick="addSpaceshipDetails"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -94,6 +96,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginBottom="32dp"
         android:text="@string/cancel"
+        android:onClick="backToMain"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
